# Algorithms-Data-Structures

Individual task/: CMakeLists.txt  PyramidSort.cpp  QuickSort.cpp  SortByPairMergers.cpp  TournamentSort.cpp  TreeSorting.cpp
doc/: Doc Lab02.docx  Doc Lab03.docx  Doc Lab04.docx  Doc Lab05.docx  Doc Lab06.docx  Doc Lab07.docx  Doc Lab08.docx  Doc Lab09.docx  Doc Lab10.docx  Doc Lab11.docx  Doc Lab12.docx  Doc Lab13.docx  Doc Lab14.docx  Individual task. Vlad Makarenko.docx  doc.rar
lab02/Ітерація/: main.c
lab03/: char.txt
lab05/: lab05.c
lab07/1/: main.cpp
lab07/2/: main.cpp
lab08/: CMakeLists.txt  main.cpp
lab1/: Readme.md
lab10/: main.cpp
lab11/: main.cpp
lab12/: BitwiseDigitalSorting.cpp  CMakeLists.txt  PyramidSorting.cpp  SortByPairMergers.cpp
lab13/: CMakeLists.txt  main.cpp  main2.cpp
lab14/: CMakeLists.txt  main.cpp
lab2/Рекурсія/: main.c
lab3/: CMakeLists.txt  double.txt  long int.txt  main.c
lab4/: main.c
lab6/: CMakeLists.txt  main.c
lab9/: CMakeLists.txt  main.cpp
